// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordInput /> when visibility is not toggled renders correctly 1`] = `
.c3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
}

.c1 {
  position: relative;
}

.c2 {
  border: none;
  margin: 0;
  padding: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  line-height: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  position: absolute;
  height: 100%;
  top: 0;
  left: calc(100% - 5rem);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2:focus {
  outline: none;
}

.c0 {
  display: block;
  width: 100%;
  margin: 0;
  margin-bottom: 0.75rem;
  padding: 0.75rem 1rem;
  font-size: 1rem;
  line-height: 1.35;
  color: #323232;
  background-color: #FFFFFF;
  border: 2px solid;
  border-color: #DADADA;
  outline: 0;
  -webkit-transition: border-color 200ms ease-in;
  transition: border-color 200ms ease-in;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-right: 5.625rem;
}

.c0:focus {
  border-color: #8DE2E0;
}

.c0:disabled {
  opacity: 0.7;
  cursor: not-allowed;
}

.c0[readonly] {
  border-color: transparent;
  background: transparent;
  padding-left: 0;
}

.c0::-webkit-input-placeholder {
  color: #666666;
}

.c0::-moz-placeholder {
  color: #666666;
}

.c0:-ms-input-placeholder {
  color: #666666;
}

.c0::placeholder {
  color: #666666;
}

.c0::-ms-clear {
  display: none;
}

<Input
  pr="5.625rem"
>
  <StyledComponent
    forwardedRef={null}
    pr="5.625rem"
  >
    <Base
      className="-Base c0"
      pr="5.625rem"
    >
      <PasswordInput__Wrapper>
        <StyledComponent
          forwardedRef={null}
        >
          <div
            className="c1"
          >
            <PasswordInput__Input
              className="-Base c0"
              pr="5.625rem"
              type="password"
            >
              <input
                className="-Base c0"
                type="password"
              />
            </PasswordInput__Input>
            <PasswordInput__Toggle
              is="button"
              onClick={[Function]}
            >
              <StyledComponent
                forwardedRef={null}
                is="button"
                onClick={[Function]}
              >
                <Clean.div
                  className="c2"
                  is="button"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="c2"
                    onClick={[Function]}
                    type="button"
                  >
                    <Icon
                      mr={2}
                      name="visibility"
                      size={22}
                    >
                      <StyledComponent
                        forwardedRef={null}
                        mr={2}
                        name="visibility"
                        size={22}
                      >
                        <Base
                          className="c3"
                          mr={2}
                          name="visibility"
                          size={22}
                          title={null}
                        >
                          <Cleaned
                            className="c3"
                            fill="currentcolor"
                            height={22}
                            mr={2}
                            title="visibility"
                            viewBox="0 0 24 24"
                            width={22}
                          >
                            <svg
                              className="c3"
                              fill="currentcolor"
                              height={22}
                              mr={2}
                              title="visibility"
                              viewBox="0 0 24 24"
                              width={22}
                            >
                              <path
                                d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
                              />
                            </svg>
                          </Cleaned>
                        </Base>
                      </StyledComponent>
                    </Icon>
                    Show
                  </button>
                </Clean.div>
              </StyledComponent>
            </PasswordInput__Toggle>
          </div>
        </StyledComponent>
      </PasswordInput__Wrapper>
    </Base>
  </StyledComponent>
</Input>
`;

exports[`<PasswordInput /> when visibility is toggled renders correctly 1`] = `
.c3 {
  vertical-align: middle;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-right: 8px;
}

.c1 {
  position: relative;
}

.c2 {
  border: none;
  margin: 0;
  padding: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  line-height: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  position: absolute;
  height: 100%;
  top: 0;
  left: calc(100% - 5rem);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2:focus {
  outline: none;
}

.c0 {
  display: block;
  width: 100%;
  margin: 0;
  margin-bottom: 0.75rem;
  padding: 0.75rem 1rem;
  font-size: 1rem;
  line-height: 1.35;
  color: #323232;
  background-color: #FFFFFF;
  border: 2px solid;
  border-color: #DADADA;
  outline: 0;
  -webkit-transition: border-color 200ms ease-in;
  transition: border-color 200ms ease-in;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-right: 5.625rem;
}

.c0:focus {
  border-color: #8DE2E0;
}

.c0:disabled {
  opacity: 0.7;
  cursor: not-allowed;
}

.c0[readonly] {
  border-color: transparent;
  background: transparent;
  padding-left: 0;
}

.c0::-webkit-input-placeholder {
  color: #666666;
}

.c0::-moz-placeholder {
  color: #666666;
}

.c0:-ms-input-placeholder {
  color: #666666;
}

.c0::placeholder {
  color: #666666;
}

.c0::-ms-clear {
  display: none;
}

<Input
  pr="5.625rem"
>
  <StyledComponent
    forwardedRef={null}
    pr="5.625rem"
  >
    <Base
      className="-Base c0"
      pr="5.625rem"
    >
      <PasswordInput__Wrapper>
        <StyledComponent
          forwardedRef={null}
        >
          <div
            className="c1"
          >
            <PasswordInput__Input
              className="-Base c0"
              pr="5.625rem"
              type="text"
            >
              <input
                className="-Base c0"
                type="text"
              />
            </PasswordInput__Input>
            <PasswordInput__Toggle
              is="button"
              onClick={[Function]}
            >
              <StyledComponent
                forwardedRef={null}
                is="button"
                onClick={[Function]}
              >
                <Clean.div
                  className="c2"
                  is="button"
                  onClick={[Function]}
                  type="button"
                >
                  <button
                    className="c2"
                    onClick={[Function]}
                    type="button"
                  >
                    <Icon
                      mr={2}
                      name="visibilityOff"
                      size={22}
                    >
                      <StyledComponent
                        forwardedRef={null}
                        mr={2}
                        name="visibilityOff"
                        size={22}
                      >
                        <Base
                          className="c3"
                          mr={2}
                          name="visibilityOff"
                          size={22}
                          title={null}
                        >
                          <Cleaned
                            className="c3"
                            fill="currentcolor"
                            height={22}
                            mr={2}
                            title="visibilityOff"
                            viewBox="0 0 24 24"
                            width={22}
                          >
                            <svg
                              className="c3"
                              fill="currentcolor"
                              height={22}
                              mr={2}
                              title="visibilityOff"
                              viewBox="0 0 24 24"
                              width={22}
                            >
                              <path
                                d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46A11.804 11.804 0 0 0 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
                              />
                            </svg>
                          </Cleaned>
                        </Base>
                      </StyledComponent>
                    </Icon>
                    Hide
                  </button>
                </Clean.div>
              </StyledComponent>
            </PasswordInput__Toggle>
          </div>
        </StyledComponent>
      </PasswordInput__Wrapper>
    </Base>
  </StyledComponent>
</Input>
`;
